Updated capitalization for WATTPAD.

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <p id="banner-title">ODE TO THE MOON 1: Top 7 Ranker</p>
     <p id="banner-subtitle">Crea la tua Top 7!</p>
     <br>
-    <p style="color:#ffffff;font-size:10px;"><a href="https://www.wattpad.com/story/269060812">Wattpad</a></p>
+    <p style="color:#ffffff;font-size:10px;"><a href="https://www.wattpad.com/story/269060812">WATTPAD</a></p>
   </div>
   <div class="flex-container padded-box">
     <div>
