--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>ST7RS Ranker</title>
+  <title>ODE TO THE MOON Ranker</title>
   <!-- <meta name="viewport" content="width=device-width, initial-scale=1"> -->
   <meta name="viewport" content="initial-scale = 2.0, maximum-scale=1.0" />
   <link rel="icon" type="image/png" href="assets/favicon.png">
