--- a/index.html
+++ b/index.html
@@ -16,17 +16,17 @@
   <title>ODE TO THE MOON Ranker</title>
   <!-- <meta name="viewport" content="width=device-width, initial-scale=1"> -->
   <meta name="viewport" content="initial-scale = 2.0, maximum-scale=1.0" />
-  <link rel="icon" type="image/png" href="assets/favicon.png">
+  <link rel="icon" type="image/png" href="favicon.png">
   <link rel="stylesheet" type="text/css" media="screen" href="styles.css" />
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Roboto+Condensed:400,700|Montserrat:400,700" rel="stylesheet">
 </head>
 <body>
   <div id="top-banner">
-    <img id="banner-image" src="assets/logo.png"/>
+    <img id="banner-image" src="assets/logo_white.png"/>
     <p id="banner-title">ODE TO THE MOON 1: Top 7 Ranker</p>
     <p id="banner-subtitle">Crea la tua Top 7!</p>
     <br>
-    <p style="color:#ffffff;font-size:10px;"><a href="https://www.wattpad.com/story/269060812">WATTPAD</a></p>
+    <p style="color:#ffffff;font-size:10px;"><a href="https://www.wattpad.com/story/269060812">WATTPAD</a> | <a href="https://produce48.github.io">Original ver.</a></a> </p>
   </div>
   <div class="flex-container padded-box">
     <div>
@@ -35,7 +35,7 @@
       </div>
       <div id="table">
         <div id="table__filter-container">
-          <input id="table__filter-input" oninput="filterTrainees(event)" type="text" placeholder="Search"/>
+          <input id="table__filter-input" oninput="filterTrainees(event)" type="text" placeholder="Cerca..."/>
         </div>
         <div id="table__entry-container">
           <!-- <div class="table__entry">
@@ -53,7 +53,7 @@
         </div>
       </div>
       <div id="filters-container">
-        <div id="filters-header"><strong>Filters</strong></div>
+        <div id="filters-header"><strong>Filri</strong></div>
         <div>
           <input type="checkbox" name="show-eliminated" id="show-eliminated" onclick="showEliminatedClick(event)"/>
           <label class="checkbox-label" for="show-eliminated">Mostra trainees eliminati (In fondo)</label>
@@ -65,7 +65,7 @@
       </div>
       <div id="sharelink-container">
         <!-- button -->
-        <input type="button" id="getlink-button" value="Get link" onclick="generateShareLink()"/>
+        <input type="button" id="getlink-button" value="Ottieni Link" onclick="generateShareLink()"/>
         <!-- text box -->
         <input type="text" placeholder="http://" id="getlink-textbox" readonly/>
         <!-- button in text box -->
