--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <div id="filters-header"><strong>Filri</strong></div>
         <div>
           <input type="checkbox" name="show-eliminated" id="show-eliminated" onclick="showEliminatedClick(event)"/>
-          <label class="checkbox-label" for="show-eliminated">Mostra trainees eliminati (In fondo)</label>
+          <label class="checkbox-label" for="show-eliminated">Mostra classifica in ordine</label>
         </div>
         <div>
           <input type="checkbox" name="show-top7" id="show-top7" onclick="showTop7Click(event)"/>
